Finish Youtube Homepage

--- a/Day_1:_Progress_Tracker/Copies/index2.html
+++ b/Day_1:_Progress_Tracker/Copies/index2.html
@@ -4,15 +4,18 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="styles.css" />
-    <link rel="stylesheet" href="checkbox_style.css" />
+    <link rel="stylesheet" href="styles2.css" />
+    <link rel="stylesheet" href="../checkbox_style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Albert+Sans:ital@0;1&family=Comfortaa:wght@400;600;700&display=swap"
       rel="stylesheet"
     />
-    <script src="https://kit.fontawesome.com/2072f7b46a.js" crossorigin="anonymous"></script>
+    <script
+      src="https://kit.fontawesome.com/2072f7b46a.js"
+      crossorigin="anonymous"
+    ></script>
     <title>Progress Tracker</title>
   </head>
   <body>
@@ -31,13 +34,15 @@
           class="css-label lite-green-check"
         ></label>
         <div class="list_box">
-          <input class="user_entry" type="text"></input>
+          <input type="text" class="user_entry" />
         </div>
         <div class="button_container">
-          <button id="new_element_btn" onclick="addListElement(0)"><i class="fa-solid fa-plus"></i></button>
+          <button id="new_element_btn" onclick="addListElement(0)">
+            <i class="fa-solid fa-plus"></i>
+          </button>
         </div>
       </div>
     </div>
-    <script src="script.js"></script>
+    <script src="script2.js"></script>
   </body>
 </html>
