Finish Day 4: Folding List

--- a/Day_4_Folding_List/index.html
+++ b/Day_4_Folding_List/index.html
@@ -8,6 +8,7 @@
       src="https://kit.fontawesome.com/2072f7b46a.js"
       crossorigin="anonymous"
     ></script>
+    <script src="script.js" defer></script>
     <link rel="stylesheet" href="style.css" />
     <title>Folding List</title>
   </head>
@@ -21,37 +22,108 @@
           </a>
         </li>
         <li class="nav-item nav-search-box">
-            <div class="search-box-container">
-                <i class="fa-solid fa-magnifying-glass"></i>
-                <input class="search-box-input" type="text" placeholder="search">
-            </div>
+          <div class="search-box-container">
+            <i class="fa-solid fa-magnifying-glass"></i>
+            <input
+              class="search-box-input"
+              type="text"
+              placeholder="elephant"
+            />
+          </div>
         </li>
         <li class="nav-item">
           <a href="#"
-            ><i class="fa-solid fa-cat"></i></i
-            ><span class="link-text icon-text">Cat</span>
+            ><i class="fa-solid fa-cat"></i>
+            <span class="link-text icon-text">Cat</span>
           </a>
         </li>
         <li class="nav-item">
           <a href="#"
-            ><i class="fa-solid fa-cat"></i></i
-            ><span class="link-text icon-text">Cat</span>
+            ><i class="fa-solid fa-cow"></i></i>
+            <span class="link-text icon-text">Cow</span>
           </a>
         </li>
         <li class="nav-item">
           <a href="#"
-            ><i class="fa-solid fa-cat"></i></i
-            ><span class="link-text icon-text">Cat</span>
-          </a>
-        </li>
-        <li class="nav-item">
-          <a href="#"
-            ><i class="fa-solid fa-cat"></i></i
-            ><span class="link-text icon-text">Cat</span>
+            ><i class="fa-solid fa-crow"></i>
+            <span class="link-text icon-text">Bird</span>
           </a>
         </li>
       </ul>
     </nav>
-    <main></main>
+    <div class="navbar-bottom"></div>
+    <main>
+      <div class="hero">
+        <div class="hero-text">
+          <h1 class="hero-element hero-header">Fish</h1>
+          <p class="hero-element hero-subtext">Stinky Fish.</p>
+        </div>
+        <i onclick="stinkyBoi()" class="hero-element hero-icon fa-solid fa-fish flip-duo"></i>
+      </div>
+      <div class="accordion">
+        <div class="accordion-item">
+          <div class="accordion-item-header">
+            <h2 class="accordion-item-header-text">Turtle</h2>
+            <div class="accordion-item-header-btn"></div>
+          </div>
+          <div class="accordion-item-body">
+            <div class="accordion-item-body-content">
+              Neutra pickled beard normcore food truck! Williamsburg mumblecore
+              vape affogato banjo, shaman street art gochujang la croix pickled
+              tote bag next level pop-up. PBR&B kale chips cold-pressed, praxis
+              gatekeep banjo truffaut pitchfork sriracha scenester. Unicorn
+              beard readymade raw denim ramps normcore vibecession, kickstarter
+              food truck mustache chartreuse four dollar toast. Austin gochujang
+              iceland, mlkshk bodega boys knausgaard Brooklyn. Selvage
+              farm-to-table four dollar toast you probably haven't heard of them
+              pitchfork tattooed microdosing. Freegan sartorial tilde vaporware
+              crucifix.
+            </div>
+          </div>
+        </div>
+        <div class="accordion-item">
+          <div class="accordion-item-header">
+            <h2 class="accordion-item-header-text">Horse</h2>
+            <div class="accordion-item-header-btn"></div>
+          </div>
+          <div class="accordion-item-body">
+            <div class="accordion-item-body-content">
+              Farm-to-table taiyaki vice raw denim helvetica quinoa knausgaard
+              tousled. Marfa etsy art party, raclette poke banh mi ugh wolf
+              edison bulb. Truffaut poutine fanny pack distillery, knausgaard
+              snackwave vaporware thundercats normcore. Roof party adaptogen
+              pop-up sus fashion axe vinyl. Bodega boys fanny pack small batch
+              tousled plaid subway tile street art gentrify chia viral. Small
+              batch jean shorts edison bulb, yr tacos man braid yes plz before
+              they sold out put a bird on it artisan blue bottle mukbang twee
+              butcher.
+            </div>
+          </div>
+        </div>
+        <div class="accordion-item">
+          <div class="accordion-item-header">
+            <h2 class="accordion-item-header-text">Polar Bear</h2>
+            <div class="accordion-item-header-btn"></div>
+          </div>
+          <div class="accordion-item-body">
+            <div class="accordion-item-body-content">
+              Cliche mixtape af chia, copper mug banjo flexitarian PBR&B JOMO
+              synth. Letterpress banjo kogi hexagon gochujang flannel hell of
+              tumblr hella. Prism shaman mixtape, wayfarers ugh ethical mustache
+              man bun four dollar toast deep v ennui 3 wolf moon beard.
+              Biodiesel gastropub vibecession, venmo fashion axe adaptogen
+              direct trade. IPhone try-hard copper mug hexagon Brooklyn.
+              Cold-pressed pork belly normcore, meggings typewriter try-hard DIY
+              shabby chic mixtape quinoa pinterest pug gastropub. Umami selfies
+              vape, adaptogen kogi cold-pressed pok pok tonx single-origin
+              coffee humblebrag organic salvia ethical meditation. Polaroid
+              semiotics forage wolf. Cloud bread +1 post-ironic, shoreditch 3
+              wolf moon master cleanse vibecession health goth bushwick. Pickled
+              mumblecore echo park before they sold out normcore.
+            </div>
+          </div>
+        </div>
+      </div>
+    </main>
   </body>
 </html>
