Add JavaScript for changing pixel color

--- a/Day_5_Pixel_Grid/index.html
+++ b/Day_5_Pixel_Grid/index.html
@@ -17,49 +17,56 @@
       rel="stylesheet"
     />
     <title>Pixel Grid</title>
-  </head>
-  <body>
-    <header class="header">
-        <nav class="navbar">
-            <ul class="navbar-container">
-              <li class="nav-item logo">
-                <a href="#"
-                  ><i class="fa-brands fa-pix"></i><span class="link-text icon-text">PixelDraw</span>
-                </a>
-              </li>
-              <li class="nav-item nav-search-box">
-                <div class="search-box-container">
-                  <i class="fa-solid fa-magnifying-glass"></i>
-                  <input
-                    class="search-box-input"
-                    type="text"
-                    placeholder="search"
-                  />
-                </div>
-              </li>
-              <li class="nav-item">
-                <a href="#"
-                  ><i class="fa-solid fa-cat"></i>
-                  <span class="link-text icon-text">Link</span>
-                </a>
-              </li>
-              <li class="nav-item">
-                <a href="#"
-                  ><i class="fa-solid fa-cow"></i></i>
-                  <span class="link-text icon-text">Link</span>
-                </a>
-              </li>
-              <li class="nav-item">
-                <a href="#"
-                  ><i class="fa-solid fa-crow"></i>
-                  <span class="link-text icon-text">Link</span>
-                </a>
-              </li>
-            </ul>
-          </nav>
-          <div class="navbar-bottom"></div>
-        </header>
-    <main></main>
+</head>
+<body>
+  <header class="header">
+    <nav class="navbar">
+      <ul class="navbar-container">
+        <li class="nav-item logo">
+          <a href="#"
+            ><i class="fa-brands fa-pix"></i><span class="link-text icon-text">PixelDraw</span>
+          </a>
+        </li>
+        <li class="nav-item nav-search-box">
+          <div class="search-box-container">
+            <i class="fa-solid fa-magnifying-glass"></i>
+            <input
+              class="search-box-input"
+              type="text"
+              placeholder="search"
+            />
+          </div>
+        </li>
+        <li class="nav-item">
+          <a href="#"
+            ><i class="fa-solid fa-cat"></i>
+            <span class="link-text icon-text">Link</span>
+          </a>
+        </li>
+        <li class="nav-item">
+          <a href="#"
+            ><i class="fa-solid fa-cow"></i></i>
+            <span class="link-text icon-text">Link</span>
+          </a>
+        </li>
+        <li class="nav-item">
+          <a href="#"
+            ><i class="fa-solid fa-crow"></i>
+            <span class="link-text icon-text">Link</span>
+          </a>
+        </li>
+      </ul>
+    </nav>
+    <div class="navbar-bottom"></div>
+  </header>
+    <main>
+      <div class="main-container"> 
+        <div class="toolbar"></div>
+        <div class="toolbar-bottom"></div>
+        <div id="pixel-container" class="pixel-container">
+        </div>
+      </div>
+    </main>
     <footer></footer>
 </body>
 </html>
