--- a/Day_5_Pixel_Grid/index.html
+++ b/Day_5_Pixel_Grid/index.html
@@ -61,7 +61,12 @@
   </header>
     <main>
       <div class="main-container"> 
-        <div class="toolbar"></div>
+        <div class="toolbar">
+          <div class="color-picker-container">
+            <p>Pick a color: </p>
+            <input type="color" id="color-picker" name="color-picker">
+          </div>
+        </div>
         <div class="toolbar-bottom"></div>
         <div id="pixel-container" class="pixel-container">
         </div>
