Day 5 Finish Pixel Grid

--- a/Day_5_Pixel_Grid/index.html
+++ b/Day_5_Pixel_Grid/index.html
@@ -64,8 +64,9 @@
         <div class="toolbar">
           <div class="color-picker-container">
             <p>Pick a color: </p>
-            <input type="color" id="color-picker" name="color-picker">
+            <input type="color" id="colorPicker" name="color-picker" value="#e66465">
           </div>
+          <button id="clearBtn">Clear</button>
         </div>
         <div class="toolbar-bottom"></div>
         <div id="pixel-container" class="pixel-container">
